// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectGA4CTATileWidget should render a title when only a single Connect GA4 CTA is present 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--keyMetricsConnectGA4CTATile"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-widget--connectModuleCTATile googlesitekit-km-widget-tile false"
      >
        <div
          class="googlesitekit-km-widget-tile__title-container"
        >
          <h3
            class="googlesitekit-km-widget-tile__title"
          >
            Top earning pages
          </h3>
          <span
            class="googlesitekit-info-tooltip"
            title="Pages that generated the most AdSense revenue"
          >
            <svg />
          </span>
        </div>
        <div
          class="googlesitekit-km-widget-tile__body"
        >
          <div
            class="googlesitekit-km-connect-module-cta-tile"
          >
            <div
              class="googlesitekit-km-connect-module-cta-tile__content"
            >
              <p
                class="googlesitekit-km-connect-module-cta-tile__text"
              >
                Analytics is disconnected, metric can’t be displayed
              </p>
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Connect Analytics
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConnectGA4CTATileWidget should render the Connect GA4 CTA tile 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--keyMetricsConnectGA4CTATile"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-widget--connectModuleCTATile googlesitekit-km-widget-tile  googlesitekit-km-widget-tile--combined"
      >
        <div
          class="googlesitekit-km-widget-tile__body"
        >
          <div
            class="googlesitekit-km-connect-module-cta-tile"
          >
            <div
              class="googlesitekit-km-connect-module-cta-tile__content"
            >
              <p
                class="googlesitekit-km-connect-module-cta-tile__text"
              >
                Analytics is disconnected, some of your metrics can’t be displayed
              </p>
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Connect Analytics
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="googlesitekit-km-connect-module-cta-tile__ghost-card"
        >
          <div
            class="googlesitekit-preview-block"
            style="width: 100%; height: 90px;"
          >
            <div
              class="googlesitekit-preview-block__wrapper"
            />
          </div>
        </div>
        <div
          class="googlesitekit-km-connect-module-cta-tile__ghost-card"
        >
          <div
            class="googlesitekit-preview-block"
            style="width: 100%; height: 90px;"
          >
            <div
              class="googlesitekit-preview-block__wrapper"
            />
          </div>
        </div>
        <div
          class="googlesitekit-km-connect-module-cta-tile__ghost-card"
        >
          <div
            class="googlesitekit-preview-block"
            style="width: 100%; height: 90px;"
          >
            <div
              class="googlesitekit-preview-block__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
